build(app): Finalització de la app i exportació a dmg